# AgentID

./: .gitignore  LICENSE  README.md
.github/workflows/: publish.yml
agents/: code_agent.py  debug_agent.py  docs_agent.py  execution_agent.py  schema.py  spec_agent.py  supervisor.py  test_agent.py
cli/: index.ts  package.json
core/: Cargo.toml  build.rs
core/proto/: agentid.proto
core/src/: identity.rs  lib.rs  napi_bindings.rs  scopes.rs  server.rs  token.rs  vault.rs
sdk/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
sdk/python/agentid/: __init__.py  identity.py  token.py
sdk/python/agentid/integrations/: __init__.py  crewai.py  fastapi.py  langgraph.py
sdk/python/src/: lib.rs
sdk/python/tests/: smoke_fastapi_client.py  smoke_fastapi_server.py  smoke_identity.py  test_identity.py  test_middleware.py  test_token.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/scripts/: build-native.mjs
sdk/typescript/src/: identity.ts  index.ts  native.ts  types.ts  vault.ts  verify.ts
