[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agentidentity-auth"
version = "0.1.0"
description = "Cryptographic identity for AI agents. Verifiable Ed25519 tokens replacing hardcoded API keys."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [
    { name = "Samvardhan Singh" },
    { name = "Muskan Gujar" },
]
keywords = ["agent", "identity", "ed25519", "authentication", "ai", "langchain", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]
crewai = ["crewai>=0.80.0"]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
all = ["agentid-auth[langgraph]", "agentid-auth[crewai]", "agentid-auth[fastapi]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "agentid-auth[all]",
]

[project.urls]
Homepage = "https://github.com/samvardhan03/AgentID"
Repository = "https://github.com/samvardhan03/AgentID"
Documentation = "https://github.com/samvardhan03/AgentID/tree/main/sdk/python"

[tool.maturin]
# The Python module name must match the folder name in the source tree.
module-name = "agentid._native"
features = []
python-source = "."
manifest-path = "Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
